Added media query for screen Ipad Mini

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Perferendis quia, dignissimos nam ratione veniam quibusdam porro
                     omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                    minima fugiat explicabo eum dolore.</br></br></br>
+                    minima fugiat explicabo eum dolore.</br></br><br class="hide"/>
                     <a href="index.html#name"
-                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow py-4 px-3">Launch Yoga
+                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow ">Launch Yoga
                         App</a>
                 </div>
             </div>
@@ -71,9 +71,9 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Perferendis quia, dignissimos nam ratione veniam quibusdam porro
                     omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                    minima fugiat explicabo eum dolore.</br></br></br>
+                    minima fugiat explicabo eum dolore.</br></br><br class="hide" />
                     <a href="index.html#name"
-                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow py-4 px-3">Launch
+                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow ">Launch
                         Weather App</a>
                 </div>
                 <div class="col-sm-6">
@@ -91,9 +91,9 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Perferendis quia, dignissimos nam ratione veniam quibusdam porro
                     omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                    minima fugiat explicabo eum dolore.</br></br></br>
+                    minima fugiat explicabo eum dolore.</br></br><br class="hide" />
                     <a href="index.html#name"
-                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow py-4 px-3">Launch
+                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow ">Launch
                         Yogurt App</a>
                 </div>
             </div>
