Updated the code to accomodate small screen view and the SEO

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content=" About Alisha Brodin-Skills and the list of front-end projects done ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -18,7 +19,7 @@
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="index.html">Alisha Brodin</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button class="navbar-toggler navbar-toggler-about-page" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,9 +38,9 @@
             </div>
         </div>
     </nav>
-    <div class="content">
+    <div class="content-about-page">
         <h1 class="mt-5">About me</h1>
-        <h3>Front-end developer from Berlin, Germany</h3>
+        <h3 class="my-2">Front-end developer from Berlin, Germany</h3>
         <p class="about-paragraphs bg-body">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
             aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
@@ -47,22 +48,22 @@
             blanditiis harum.
         </p>
 
-        <div class="container m-4">
+        <div class="container about-page-container margin-4">
             <div class="row">
-                <div class="col-4">
-                    <img src="images/yoga.png" class="img-fluid rounded shadow p-2" width="100%" alt="yoga" />
+                <div class="col-sm-4">
+                    <img src="images/yoga.png" class="img-fluid rounded shadow p-2" width="100%" alt="A women doing yoga pose" />
                 </div>
-                <div class="col-4">
-                    <img src="images/weather.png" class="img-fluid rounded shadow p-2" width="100%" alt="yoga" />
+                <div class="col-sm-4">
+                    <img src="images/weather.png" class="img-fluid rounded shadow p-2" width="100%" alt="Image of the Weather App built" />
                 </div>
-                <div class="col-4">
-                    <img src="images/yogurt.png" class="img-fluid rounded shadow p-2" width="100%" alt="yoga" />
+                <div class="col-sm-4">
+                    <img src="images/yogurt.png" class="img-fluid rounded shadow p-2" width="100%" alt="A picture of yogurt in a cup topped with blue berries" />
                 </div>
             </div>
         </div>
         <div id="contact">
             <h2>📮 Contact me</h2>
-            <a href="mailto:alisha.brodin@gmail.com" class="email-link">
+            <a href="mailto:alisha.brodin@gmail.com" class="email-link" title="My emailId">
                 alisha.brodin@gmail.com
             </a>
         </div>
