--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About me</a>
+                        <a class="nav-link" href="about.html" >About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact">Contact me</a>
+                        <a class="nav-link" href="about.html#contact" >Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -44,20 +44,20 @@
         <h3>🇮🇳 Front-end developer, based in Berlin</h3>
 
         <div class="navigation-links">
-            <a href="about.html#contact" class="contact-link">Contact me</a>
-            <a href="about.html" class="about-link">About me</a>
+            <a href="about.html#contact" class="contact-link" title="Click here to contact me via email">Contact me</a>
+            <a href="about.html" class="about-link" title="Click here to know more about me">About me</a>
         </div>
         <div class="project-1 mt-5 ">
             <div class="row">
-                <div class="col-6 ">
-                    <img src="images/yoga.png" alt="yoga" class="img-fluid rounded" width="100%" />
+                <div class="col-sm-6 media-col  ">
+                    <img src="images/yoga.png" alt="yoga" class="img-fluid rounded media-img" width="100%" alt="A women doing yoga pose"/>
                 </div>
                 <div class="col-sm-6">
-                    <h2 class="text-start">Yoga app</h2></br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <h2 class="sub-heading">Yoga app</h2></br>
+                   <section>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Perferendis quia, dignissimos nam ratione veniam quibusdam porro
                     omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                    minima fugiat explicabo eum dolore.</br></br><br class="hide"/>
+                    minima fugiat explicabo eum dolore.</section></br><br><br class="hide"/>
                     <a href="index.html#name"
                         class=" yogaAppbtn  border rounded text-decoration-none text-white shadow ">Launch Yoga
                         App</a>
@@ -66,32 +66,32 @@
         </div>
         <div class="project-2 mt-5">
             <div class="row">
-                <div class="col-6 ">
-                    <h2 class="text-start">Weather app</h2></br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <div class="col-sm-6 ">
+                    <h2 class="sub-heading">Weather app</h2></br>
+                   <section>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Perferendis quia, dignissimos nam ratione veniam quibusdam porro
                     omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                    minima fugiat explicabo eum dolore.</br></br><br class="hide" />
+                    minima fugiat explicabo eum dolore.</section></br></br><br class="hide" />
                     <a href="index.html#name"
                         class=" yogaAppbtn  border rounded text-decoration-none text-white shadow ">Launch
                         Weather App</a>
                 </div>
-                <div class="col-sm-6">
-                    <img src="images/weather.png" alt="weather" class="img-fluid rounded" width="100%" />
+                <div class="col-sm-6 media-col ">
+                    <img src="images/weather.png" alt="Image of the Weather App built" class="img-fluid rounded media-img" width="100%" />
                 </div>
             </div>
         </div>
         <div class="project-3 mt-5">
             <div class="row">
-                <div class="col-sm-6">
-                    <img src="images/yogurt.png" alt="yoga" class="img-fluid rounded" width="100%" />
+                <div class="col-sm-6 media-col ">
+                    <img src="images/yogurt.png" alt="A picture of yogurt in a cup topped with blue berries" class="img-fluid rounded media-img" width="100%" />
                 </div>
                 <div class="col-sm-6 ">
-                    <h2 class="text-start">Yogurt app</h2></br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <h2 class="sub-heading">Yogurt app</h2></br>
+                   <section>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Perferendis quia, dignissimos nam ratione veniam quibusdam porro
                     omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                    minima fugiat explicabo eum dolore.</br></br><br class="hide" />
+                    minima fugiat explicabo eum dolore.</section><br><br><br class="hide" />
                     <a href="index.html#name"
                         class=" yogaAppbtn  border rounded text-decoration-none text-white shadow ">Launch
                         Yogurt App</a>
