--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Alisha Brodin</a>
+            <a class="navbar-brand" href="/" title="homepage">Alisha Brodin</a>
             <button class="navbar-toggler navbar-toggler-about-page" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="/" title="My homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About me</a>
+                        <a class="nav-link active" href="/about.html" title="Project Info and contact details">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact">Contact me</a>
+                        <a class="nav-link" href="/about.html#contact" title="Contact details">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -51,13 +51,13 @@
         <div class="container about-page-container margin-4">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="images/yoga.png" class="img-fluid rounded shadow p-2" width="100%" alt="A women doing yoga pose" />
+                    <img src="/images/yoga.png" class="img-fluid rounded shadow p-2" width="100%" alt="A women doing yoga pose" />
                 </div>
                 <div class="col-sm-4">
-                    <img src="images/weather.png" class="img-fluid rounded shadow p-2" width="100%" alt="Image of the Weather App built" />
+                    <img src="/images/weather.png" class="img-fluid rounded shadow p-2" width="100%" alt="Image of the Weather App built" />
                 </div>
                 <div class="col-sm-4">
-                    <img src="images/yogurt.png" class="img-fluid rounded shadow p-2" width="100%" alt="A picture of yogurt in a cup topped with blue berries" />
+                    <img src="/images/yogurt.png" class="img-fluid rounded shadow p-2" width="100%" alt="A picture of yogurt in a cup topped with blue berries" />
                 </div>
             </div>
         </div>
