--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Alisha Brodin</a>
+            <a class="navbar-brand" href="/" title="homepage">Alisha Brodin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/" title="My homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html" >About me</a>
+                        <a class="nav-link" href="/about.html" title="Project Info and contact details">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact" >Contact me</a>
+                        <a class="nav-link" href="/about.html#contact" title="Contact Info">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -44,13 +44,13 @@
         <h3>🇮🇳 Front-end developer, based in Berlin</h3>
 
         <div class="navigation-links">
-            <a href="about.html#contact" class="contact-link" title="Click here to contact me via email">Contact me</a>
-            <a href="about.html" class="about-link" title="Click here to know more about me">About me</a>
+            <a href="/about.html#contact" class="contact-link" title="Click here to contact me via email">Contact me</a>
+            <a href="/about.html" class="about-link" title="Click here to know more about me">About me</a>
         </div>
         <div class="project-1 mt-5 ">
             <div class="row">
-                <div class="col-sm-6 media-col  ">
-                    <img src="images/yoga.png" alt="yoga" class="img-fluid rounded media-img" width="100%" alt="A women doing yoga pose"/>
+                <div class="col-sm-6 ">
+                    <img src="/images/yoga.png" alt="yoga" class="img-fluid rounded media-img d-none d-sm-block" width="100%" alt="A women doing yoga pose"/>
                 </div>
                 <div class="col-sm-6">
                     <h2 class="sub-heading">Yoga app</h2></br>
@@ -59,7 +59,7 @@
                     omnis quam vel eos eveniet alias temporibus deserunt veritatis
                     minima fugiat explicabo eum dolore.</section></br><br><br class="hide"/>
                     <a href="index.html#name"
-                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow ">Launch Yoga
+                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow " title="Yoga App">Launch Yoga
                         App</a>
                 </div>
             </div>
@@ -76,15 +76,15 @@
                         class=" yogaAppbtn  border rounded text-decoration-none text-white shadow ">Launch
                         Weather App</a>
                 </div>
-                <div class="col-sm-6 media-col ">
-                    <img src="images/weather.png" alt="Image of the Weather App built" class="img-fluid rounded media-img" width="100%" />
+                <div class="col-sm-6">
+                    <img src="/images/weather.png" alt="Image of the Weather App built" class="img-fluid rounded media-img d-none d-sm-block" width="100%" title="Weather App" />
                 </div>
             </div>
         </div>
         <div class="project-3 mt-5">
             <div class="row">
-                <div class="col-sm-6 media-col ">
-                    <img src="images/yogurt.png" alt="A picture of yogurt in a cup topped with blue berries" class="img-fluid rounded media-img" width="100%" />
+                <div class="col-sm-6">
+                    <img src="/images/yogurt.png" alt="A picture of yogurt in a cup topped with blue berries" class="img-fluid rounded media-img d-none d-sm-block" width="100%" />
                 </div>
                 <div class="col-sm-6 ">
                     <h2 class="sub-heading">Yogurt app</h2></br>
@@ -93,7 +93,7 @@
                     omnis quam vel eos eveniet alias temporibus deserunt veritatis
                     minima fugiat explicabo eum dolore.</section><br><br><br class="hide" />
                     <a href="index.html#name"
-                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow ">Launch
+                        class=" yogaAppbtn  border rounded text-decoration-none text-white shadow " title="Yogurt App">Launch
                         Yogurt App</a>
                 </div>
             </div>
